--- a/build.xml
+++ b/build.xml
@@ -1,9 +1,9 @@
 <project name="testing" default="UpdateDB">
-
+<property name="JSON_Location" Value ="C:\Windows\System32\config\systemprofile\AppData\Local\Jenkins\.jenkins\workspace\connpropdb.json"/>
 
 <target name="UpdateDB">
 <exec executable="curl">
-<arg line="curl -X POST -u ankita.deulkar@lntinfotech.com:Asdfghjkl@2020 -H X-HTTP-Method-Override:PATCH -H Content-Type:application/json -d @C:\Windows\System32\config\systemprofile\AppData\Local\Jenkins\.jenkins\workspace\connpropdb.json https://oicintegrationinstance-bmcg1bx14wqj-bo.integration.ocp.oraclecloud.com/ic/api/integration/v1/connections/ORACL_ON_PREM_DB_CONN_AD"/>
+<arg line="curl -X POST -u ankita.deulkar@lntinfotech.com:Asdfghjkl@2020 -H X-HTTP-Method-Override:PATCH -H Content-Type:application/json -d @${JSON_Location} https://oicintegrationinstance-bmcg1bx14wqj-bo.integration.ocp.oraclecloud.com/ic/api/integration/v1/connections/ORACL_ON_PREM_DB_CONN_AD"/>
 </exec>
 </target>
 
